--- a/src/scss/community/community.scss
+++ b/src/scss/community/community.scss
@@ -121,6 +121,20 @@ div[data-dojo-attach-point="_tagSearchText"] a,
 }
 
 .lotusui {
+  > .lotusCommunities {
+    .lotusBanner {
+      margin-bottom: 140px;
+    }
+    .tabNavBar {
+      position: absolute;
+      width: 100%;
+      top: $header-height;
+      &.tabNavFixed {
+        position: fixed;
+        top: 0;
+      }
+    }
+  }
   .lotusMain {
     .resultsDisplay {
       .filter-refiner {
